# SPOASR_Kursovaya

kursovaya/: CMakeLists.txt  kurs.launch  package.xml
kursovaya/src/: spawner.cpp  translator.cpp
